# SRI

./: .gitignore  404.html  index.html  mkdocs (mundo's conflicted copy 2025-01-10).yml  mkdocs.yml  mkdocs.yml (mundo's conflicted copy 2024-10-28).bak  mkdocs.yml (mundo's conflicted copy 2025-01-10).bak  mkdocs.yml.bak  nav.py  nav.yml  publica.sh  pyproject.toml
01.-DHCP/: index.html
01.-DHCP/01.-History/: index.html
01.-DHCP/02.-Overview/: index.html
01.-DHCP/03.-Operation Process/: index.html
01.-DHCP/04.-Client configuration parameters/: index.html
01.-DHCP/05.-DHCP Options/: index.html
01.-DHCP/06.-Relaying/: index.html
01.-KVM/: index.html
01.-KVM/01.-Red/: index.html
01.-KVM/02.-Red/: index.html
01.-KVM/06.-Clonación y Snapshots/: index.html
01.-KVM/10.-Ejercicios/: index.html
01.-KVM/10.-Prácticas/: index.html
01.-KVM/92.-Red/: index.html
02.-DHCP/: index.html
02.-DHCP/01.-History/: index.html
02.-DHCP/02.-Overview/: index.html
02.-DHCP/03.-Operation Process/: index.html
02.-DHCP/05.-DHCP Options/: index.html
02.-SSH/: Archive.tar  index.html
03.-DHCP/: index.html
04.-DNS/: index.html
05.-Docker/: index.html
06.-IaC/: index.html
07.-IA en Redes e Infraestructuras/: index.html
99.-Anexos/: index.html
99.-Cajón Desastre/: index.html
99.-Disaster Drawer/: index.html
CajónSRI/: 02.-Creación del escenario (mundo's conflicted copy 2024-11-11).md  PreguntasEjerciciosKVM.gift  README.md  pregSSH_30.gift  preguntas_intermedio.gift
docs/: index.md
search/: search_index.json
site/: 404.html  index.html
(+966 files in other folders)
